welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:12: error: not found: value couelurs
    peindreSol(couelurs((i + decalage) % couleurs.length))
               ^